# games_today

./: .gitignore  Cargo.toml  Makefile.toml  README.md  index.html  netlify.toml  styles.css
data/: team_colors.json  teams.json
src/: lib.rs
src/pages/: games_page.rs  mod.rs
static/: index.html
