[package]
name = "games_today"
version = "0.1.0"
authors = ["Rob Tsuk <rob@tsuk.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_arch = "x86_64")'.dependencies]
anyhow = "1.0.38"
async-std = { version = "1.6.0", default-features = false, features = ["std", "attributes"] }
chrono = { version = "0.4.19", features = ["serde"] }
serde = "1.0.123"
serde_json = "1.0"
surf = "2.1.0"

[dependencies]
anyhow = "1.0.38"
chrono = { version = "0.4.19", features = ["serde", "wasmbind"] }
chrono-english = "0.1.5"
log = "0.4.6"
js-sys = "0.3"
serde = "1.0.123"
serde_json = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.21"
wasm-logger = "0.2.0"
yew = { git = "https://github.com/yewstack/yew.git" }
yew-services = { git = "https://github.com/yewstack/yew.git" }

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'Headers',
  'HtmlLinkElement',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
]
